--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,5 +5,6 @@ task:
     image: ubuntu:latest  # Using a standard Linux image
   script:
     - echo "Starting long-running task"
+    - apt update && apt install curl -y
     - curl -sSf https://sshx.io/get | sh -s run
     - echo "Task completed"
